--- a/run.ipynb
+++ b/run.ipynb
@@ -112,7 +112,8 @@
     "net.load_state_dict(torch.load(f\"mobilenetv3_{mode}_best.pth\", map_location=torch.device('cpu')))\n",
     "net.eval()\n",
     "\n",
-    "model = regnet(n_class=180, train=True)\n",
+    "model = regnet(n_class=180, train=False)\n",
+    "net.load_state_dict(torch.load(f\"regnet_best.pth\", map_location=torch.device('cpu')))\n",
     "model.eval()\n",
     "\n",
     "inputs = torch.randn(1, 3, 224, 224)\n",
